<resources>
    <string name="app_name">Odds Booking</string>
    <string-array name="rooms">
        <item>All Stars</item>
        <item>Neon</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_string">Name*</string>
    <string name="email_string">Email*</string>
    <string name="phone_number_string">Phone Number*</string>
    <string name="room_string">Room*</string>
    <string name="reason_string">Reason*</string>
    <string name="from_date_string">From Date*</string>
    <string name="to_date_string">To Date*</string>
    <string name="from_string">From*</string>
    <string name="to_string">To*</string>
    <string name="time_string">Time*</string>
    <string name="preview_string">PREVIEW</string>
    <string name="return_string">RETURN</string>
    <string name="submit_string">SUBMIT</string>
    <string name="odds_logo_des">ODDS color logo</string>
    <string name="rooms_booking">Rooms Booking</string>
    <string name="demo_version">Demo V0.6.1</string>
    <string name="bookings_string">Bookings</string>
    <string name="textview_string">TextView</string>
    <string name="thanks_string">Thank you!\nPlease check your email</string>
    <string name="booking_again_string">BOOKING AGAIN</string>
    <string name="success_icon_des">Success icon</string>
    <string name="full_name_empty_err">Full name can\'t be empty</string>
    <string name="email_empty_err">Email can\'t be empty</string>
    <string name="phone_number_empty_err">Phone number can\'t be empty</string>
    <string name="room_empty_err">Please select room</string>
    <string name="reason_empty_err">Reason can\'t be empty</string>
    <string name="from_date_empty_err">From date can\'t be empty</string>
    <string name="to_date_empty_err">To date can\'t be empty</string>
    <string name="time_empty_err">time can\'t be empty</string>
    <string name="email_format_err">Email format error</string>
    <string name="phone_number_format_err">Phone number format error</string>
</resources>